--- a/tex/grant/preamble.tex
+++ b/tex/grant/preamble.tex
@@ -9,6 +9,7 @@
 \usepackage{mathrsfs}
 \usepackage{texshade}
 \usepackage{hyperref}
+\usepackage{pdfpages}
 \hypersetup{
   colorlinks=true,
   linkcolor=black,
